2017-01-30 Albert Chu <chu11@llnl.gov>
	
	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	ASROCK MT-C224.

2017-01-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-raw.8.pre.in: Fix formatting error.
	
2017-01-18 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix cut and paste documentation error.

2017-01-17 Albert Chu <chu11@llnl.gov>

	* ipmi-config/: Use inet_ntop() to output IPv4 addresses instead
	of outputting "by hand".

2017-01-03 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/pstdout.c (pstdout_hostnames_count): Slight
	logic change to differentiate between bad input and out of memory.

	* libfreeipmi/api/ipmi-api-util.c (api_set_api_errnum_by_errno):
	Recognize ENETUNREACH and EHOSTUNREACH errno's as system errors,
	not internal errors.
	
2016-12-28 Albert Chu <chu11@llnl.gov>

	* Globally support IPv6 address support in all tools as options,
	parameters, or inputs.  Globally support [ADDRESS]:PORT format for
	IPv6 address + ports.  Support additional strings indicating
	"localhost", such as "ipv6-localhost".

2016-12-06 LaMont Jones <lamont@mmjgroup.com>

	* ipmipower/: Initial pass at IPv6 support.

2016-12-05 Albert Chu <chu11@llnl.gov>

	Support IPv6 addresses in FreeIPMI

	* common/miscutil/fi_hostlist.h, common/miscutil/fi_hostlist.c:
	New files.  Wrapper around hostlist.[ch].

	* Update all tools to use fi_hostlist.[ch].
	
2017-01-13 Albert Chu <chu11@llnl.gov>

	* man/bmc-config.conf.5: Fix pointer of correct manpage.

2016-12-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c (_setup_hostname): Fix cleanup path
	potential memleak.
	
2017-01-09 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-known-issues-ping.man: Fix spelling typo. 
	
2016-12-13 Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Remove ExclusiveArch, as ppc now has iopl()
	support.

	https://lists.fedoraproject.org/pipermail/scm-commits/2011-October/676773.html
	
2016-12-09 Albert Chu <chu11@llnl.gov>
